# espkvm

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: firmware.yml
components/esp_tinyusb/: CMakeLists.txt  idf_component.yml
components/esp_tinyusb/include/: tusb_config.h
components/kvm_board/: CMakeLists.txt
components/kvm_board/include/: kvm_board.h
components/kvm_config/: CMakeLists.txt  idf_component.yml  kvm_caps.c  kvm_settings.c  kvm_settings_table.c  kvm_thermal.c
components/kvm_config/include/: kvm_caps.h  kvm_settings.h  kvm_thermal.h
components/kvm_hid/: CMakeLists.txt  idf_component.yml  usb_hid.c
components/kvm_hid/include/: usb_hid.h
components/kvm_net/: CMakeLists.txt  ethernet.c  idf_component.yml
components/kvm_net/include/: ethernet.h
components/kvm_storage/: CMakeLists.txt  kvm_storage.c
components/kvm_storage/include/: kvm_storage.h
components/kvm_web/: CMakeLists.txt  auth.c  http_server.c  tls_cert.c
components/kvm_web/include/: http_server.h  kvm_auth.h  kvm_tls.h
components/tc358743/: CMakeLists.txt  tc358743.c  tc358743_edid.h
components/tc358743/include/: tc358743.h  tc358743_hdmi_debug.h
components/video_pipeline/: CMakeLists.txt  capture.c  capture_h264.c  capture_hw.c  capture_loop.c  capture_mjpeg.c  capture_priv.h  h264_probe.c  idf_component.yml  video_frame.c
components/video_pipeline/include/: capture.h  video_frame.h
docs/: HARDWARE-NOTES.md  PORTING.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c
tools/: abs_range.py  check_hid_desc.py  check_layouts.mjs  env.sh  gen_edid.py  gen_icon.py  hid_probe.py  install-idf.sh  video_probe.mjs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
web/mock/: frame.js  plugin.js
web/src/: App.vue  layouts.js  macros.js  main.ts
web/src/components/: Icon.vue  InputPanel.vue  LoginView.vue  ScreenView.vue  SettingsPanel.vue  ToastHost.vue
web/src/input/: control.ts  keymap.ts  useInput.ts
web/src/state/: auth.ts  device.ts  toasts.ts
web/src/ui/: base.css  components.css  layout.css  tokens.css
web/src/video/: stream.ts
